# npb_metrics

./: .gitignore  README.md  __init__.py  batter.py  client.py  gen_site.py  pyproject.toml
.github/workflows/: build.yml  pages.yml
docs/: index.html  last_update.txt
docs/data/: players.json
docs/js/: app.js
npb_metrics/: base.py  client.py  constants.py  pitcher.py  player.py  utils.py
