[tool.poetry]
name = "npb-metrics"
version = "0.1.0"
description = ""
authors = ["yoshioyamazoe <sidewinder8191@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
